--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,17 +1,76 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+
 :root {
     --cor1: #76CFF9;
     --cor2: #3AA8FF;
     --cor3: #0000E0;
     --cor4: #0F007D;
     --cor5: #DEB500;
+
+    --fonte-padrao: 'Roboto', Arial, Helvetica, sans-serif;
+    --fonte-destaque: Serif;
+    --fonte-título: 'Bebas Neue', cursive; 
+}
+
+
+* {
+    padding: 0px;
+    margin: 0px;
 }
 
 body {
     background-color: var(--cor1);
+    font-family: var(--fonte-padrao);
+}
+
+header {
+    background-image: linear-gradient(to top, var(--cor4), var(--cor3));
+    color: var(--cor5);
+    padding: 20px;
+    text-align: center;
+}
+
+header > h1 {
+    font-family: var(--fonte-título);
+    font-size: 3em;
+    width: 600px;
+    margin: auto;
+    padding: 8px;
+}
+
+header > p {
+    font-size: 1.5em;
+    width: 400px;
+    margin: auto;
+    padding: 8px;
 }
 
 main {
     background-color: white;
+    margin: auto;
+    min-width: 600px;
+    max-width: 1000px;
+    padding: 20px;
+}
+
+main > h2 {
+    font-family: var(--fonte-título);
+    background-image: linear-gradient(to left, white, var(--cor1), var(--cor2));
+    color: var(--cor4);
+    font-size: 2em;
+    padding: 5px;
+    margin: 5px 0px;
+}
+
+main > p {
+    text-align: justify;
+    padding: 15px;
+}
+
+a.externo {
+    
 }
