--- a/estilos/style.css
+++ b/estilos/style.css
@@ -4,15 +4,18 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Tourney:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 :root {
     --cor1: #76CFF9;
     --cor2: #3AA8FF;
     --cor3: #0000E0;
     --cor4: #0F007D;
     --cor5: #DEB500;
+    --cor6: #ffd0007e;
 
     --fonte-padrao: 'Roboto', Arial, Helvetica, sans-serif;
-    --fonte-destaque: Serif;
+    --fonte-destaque: 'Tourney', cursive;
     --fonte-título: 'Bebas Neue', cursive; 
 }
 
@@ -29,7 +32,7 @@ body {
 
 header {
     background-image: linear-gradient(to top, var(--cor4), var(--cor3));
-    color: var(--cor5);
+    color: white;
     padding: 20px;
     text-align: center;
 }
@@ -59,18 +62,50 @@ main {
 
 main > h2 {
     font-family: var(--fonte-título);
-    background-image: linear-gradient(to left, white, var(--cor1), var(--cor2));
+    background-image: linear-gradient(to left, white, var(--cor2));
     color: var(--cor4);
     font-size: 2em;
     padding: 5px;
     margin: 5px 0px;
 }
 
-main > p {
+main p {
     text-align: justify;
     padding: 15px;
+    text-indent: 20px;
+}
+
+strong {
+    color: var(--cor4);
+}
+
+a {
+    text-decoration: none;
+    color: var(--cor4);
+    font-family: var(--fonte-destaque);
+    font-weight: 900;
+}
+
+a:hover {
+    text-decoration: underline;
+    font-size: 1.5em;
+    padding: 10px;
 }
 
 a.externo {
-    
+    padding: 5px;
+    background-color: var(--cor5);
+}
+
+a.externo::after {
+    content: ' 🔗';
+}
+
+li {
+    list-style-type: none;
+    padding: 20px;
+}
+
+li h3::before {
+    content: '✔ ';
 }
